<resources>

    <string name="app_name">Safe Car</string>

    <string name="font_normal">sans-serif-light</string>
    <string name="font_bold">sans-serif-bold</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_opened">Drawer Opened</string>
    <string name="drawer_closed">Drawer Closed</string>

    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>

    <string name="button_sharing">Share</string>
    <string name="button_notifications">Notifications</string>
    <string name="button_smartobj">Smart Objects</string>

    <string name="button_info">Info and Feedback</string>

    <string name="button_pair">Pair Plug</string>
    <string name="button_manage">Manage Plugs</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string-array name="sports_array">
        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>FootBall</item>
        <item>Basket Ball</item>
        <item>Table Tennis</item>
        <item>Chess</item>
        <item>Hockey</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="action_find_location">Find</string>

    <string name="long_text">Android 5.0 Lollipop was one of the most significant Android releases ever,
        in no small part due to the introduction of material design,
        a new design language that refreshed the entire Android experience
    </string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="initPairPlugTA">Your device is not paired with any plug. Please click the button below search the nearby plugs and to start using SafeCar !</string>
    <string name="justPairedPairPlugTA">You are now paired with a plug. Let\'s start a trip, I am sure it will be great ! We will be here, right on your side ! </string>
    <string name="noBluetoothDevices">No target device in bluetooth range</string>

    <string name="initPairPlugB">Start bluetooth scan</string>
    <string name="changePairPlugB">Change your target plug</string>
        <string name="searchPairPlugB">Looking for plugs</string>

    <string name="managePlugsSplash">In this section you can interact with your plugs. You can either check or drop them.</string>
    <string name="noPlugs">Right now, you are\'t paired with any physical device. Please go in the dedicated section in order to pair with a plug.</string>

    <string name="helloPlug">Current Plug</string>
    <string name="Name">Name</string>
    <string name="MACAddress">MAC address</string>

    <string name="plugsHeader">Plugs:</string>
    <string name="badgesHeader">Badges:</string>

    <string name="sampleBadgeDesc">This is a description of the badge</string>

    <string name="pairDevice">Below you can see the detected devices. Please, select the one you want to be paired with.</string>
    <string name="afterScanReport">After scan report:</string>
    <string name="reScan">Scan again</string>

    <string name="currentlyDriving">Currently driving</string>

    <string name="hints">Generated hints</string>
    <string name="quitTrip">Quit Trip</string>
    <string name="takeBreak">Take a break</string>

    <string name="tripReportTitle">Trip report</string>
    <string name="tripReportSecondPageText">Here we go ! Below you can see a set of indicators regarding this trip. Read them carefully and try to understand how to improve your driving style !</string>
    <string name="tripReportHiddenText">swipe, to discover the details of this trip !</string>
    <string name="tripDetails">Details</string>
    <string name="tripJustReportSecondPageText">Awesome! You definitely did a great job. Now let\'s take a look to the details of your just finished trip!</string>

    <string name="welcomeString">Welcome !</string>

    <string name="shareButton">Share now !</string>
    <string name="incentiveToShare">We hope that Safecar is helping you to improve your driving style. Please share your feelings with your friends !</string>

    <string name="badgesDetails">Badges</string>

</resources>
