<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/application_back">

    <TextView
        android:fontFamily="@string/font_normal"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/textFontSize"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/incentiveToShare"
        android:textAlignment="center"/>

    <Button
        android:fontFamily="@string/font_bold"
        android:textColor="@color/colorPrimaryText"
        android:id="@+id/shareButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:textSize="@dimen/buttonFontSize"
        android:background="@color/colorPrimaryDark"
        android:text="@string/shareButton"/>

</RelativeLayout>