<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="General">

        <!--
        <Preference
            android:title="@string/button_sharing"
            app:key="@string/button_sharing"
            android:summary="Collega i tuoi account">
        </Preference>
        -->

        <Preference
            android:title="@string/button_notifications"
            app:key="@string/button_notifications"
            android:summary="Manage push notifications">
        </Preference>

        <Preference
            android:title="@string/button_smartobj"
            app:key="@string/button_smartobj"
            android:summary="Manage your smart objects">
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Info">

        <Preference
            android:title="@string/button_info"
            app:key="@string/button_info"
            android:summary="Help us to improve our application">
        </Preference>

    </PreferenceCategory>


</PreferenceScreen>